Revision history for Perl distribution Test-Class-Moose

{{$NEXT}}

0.84     2017-05-15

  [ENHANCEMENTS]

  * Make it possible to disable the progress output shown when running tests
    in parallel. This does not play nicely with things like
    TAP::Harness::Archive and prove's --merge flag. The output ends up
    interleaved with test output, breaking the TAP.

0.83     2017-05-10

  [ENHANCEMENTS]

  * Test::Most is only loaded if you do not pass "bare => 1" when importing
    Test::Class::Moose.

  [BUG FIXES]

  * The CLI implementation released in 0.82 was broken in regards to the
    --classes parameter. This would not actually load the specified classes at
    all, because the test lib dirs were not being added to @INC.

0.82     2017-04-05

  [ENHANCEMENTS]

  * Added a Test::Class::Moose::CLI class. This provides a ready-to-go
    interface for handling CLI parameters passed to the test file that runs
    your Test::Class::Moose tests. This lets you do things like run "prove -lv
    t/tcm.t :: --classes TestFor::My::Thing" without having to write your own
    code to handle this.

    This new CLI class is entirely implemented by a role,
    Test::Class::Moose::Role::CLI, that has well-documented hooks for you to
    write your own CLI class on top of. See the docs for the class and the
    role for more details.

0.81     2017-03-16

  [ENHANCEMENTS]

  * If you pass one or more test class names to the Runner class explicitly
    and those classes are either not loaded or not subclasses of
    Test::Class::Moose, you'll get a better error message. Previously this
    would die with an unhelpful error about missing methods. Reported by Andy
    Cunningham with additional clarification from hoppfrosch. GH #57.

0.80     2016-09-25

  [BUG FIXES]

  * Depend on Test2 1.302059. This version fixes an issue where subtest output
    from test methods was not showing up. Reported by Ilya Chesnokov. GH #67.

0.79     2016-09-25

  [BACKWARDS INCOMPATIBILITIES]
